# homkare

./: README.md
backend/: .gitignore  README.md  app.py  cdk.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/cdk/: backend_stack.py
backend/cdk/constructs/: lambda_construct.py  layer_construct.py  vector_bucket_construct.py
backend/lambda/ingest/: handler.py
backend/lambda/query/: handler.py  requirements.txt
backend/main/handlers/ingest/: handler.py
backend/main/handlers/query/: handler.py
backend/main/layers/rag_core_lib/: pyproject.toml  requirements.txt
backend/main/layers/rag_core_lib/clients/: __init__.py  factory.py
backend/main/layers/rag_core_lib/models/: __init__.py  vector_metadata.py
backend/main/layers/rag_core_lib/rag_engine/: __init__.py  chunker.py  config.py  embedder.py  generator.py  reranker.py
backend/tests/unit/: test_backend_stack.py
