[project]
name = "homkare-backend-service"
version = "0.1.0"
description = "Backend AWS serverless for Homkare app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aws-cdk-lib==2.233.0",
  "aws-cdk.aws-lambda-python-alpha==2.233.0a0",
  "constructs>=10.0.0,<11.0.01"
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]
