[project]
name = "homkare-backend-service"
version = "0.1.0"
description = "Backend AWS serverless for Homkare app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aws-cdk-lib==2.233.0",
  "aws-cdk.aws-lambda-python-alpha==2.233.0a0",
  "constructs>=10.0.0,<11.0.01"
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
  # pydocstyle
  "D",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  "Q"
]
ignore = ["F401", "Q001", "Q002", "D104", "D213", "D203", "D206"]

[tool.ruff.lint.flake8-quotes]
avoid-escape = false
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true